tests/reference/asr-class01-4134616.stderr
semantic error: Only Class constructor is allowed in the object assignment for now
 --> tests/errors/class01.py:9:1
  |
9 | p2: coord = p1
  | ^^^^^^^^^^^^^^ 
